# solana-program-template

./: .ammanrc.js  .eslintrc.js  .gitignore  .solitarc.js  README.md  package.json  replace.sh
.crates/: .crates.toml  .crates2.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/build-program/: action.yml
.github/actions/install-linux-build-deps/: action.yml
.github/actions/yarn-install-and-build/: action.yml
.github/actions/yarn-install-and-verify/: action.yml
.github/workflows/: ci.yml  program-test.yml  sdk-test.yml
js/: .prettierrc.js  package.json  tsconfig.build.json  typedoc.json
js/idl/: my_program_name.json
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
program/tests/: integration.rs
scripts/: amman.sh  rename.sh  update-solana-dependencies.sh
