[package]
name = "my-program-name"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
solana-program = "=1.10.29"
shank = "0.0.2"
borsh = "0.9.3"
thiserror = "~1.0"
num-derive = "0.3.3"
num-traits = "~0.2"


[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "=1.10.29"
solana-sdk = "=1.10.29"
solana-validator = "=1.10.29"
solana-logger = "=1.10.29"

[lib]
crate-type = ["cdylib", "lib"]
